tdf#124918: Allow empty lines in the template list file